docs: update README, add env configs, fix DI, add validators

--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,19 +1,19 @@
 # Application
 PORT=3001
-NODE_ENV=development
+NODE_ENV=production
 
 # UCCX Configuration
 UCCX_HOST=http://uccx.kardan.ir
 UCCX_PORT=9080
-UCCX_USERNAME=your-username
-UCCX_PASSWORD=your-password
+UCCX_USERNAME=prod-username
+UCCX_PASSWORD=prod-password
 UCCX_POLLING_INTERVAL=30000
 UCCX_RETRY_ATTEMPTS=3
 UCCX_RETRY_DELAY=1000
 
 # Redis Configuration
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PORT=6379
-REDIS_PASSWORD=your-redis-password
+REDIS_PASSWORD=prod-redis-password
 REDIS_DB=0
 REDIS_TTL=60 
