--- a/backend/package.json
+++ b/backend/package.json
@@ -25,10 +25,15 @@
     "@nestjs/core": "^11.0.15",
     "@nestjs/platform-express": "^11.0.15",
     "@nestjs/platform-socket.io": "^11.0.15",
+    "@nestjs/swagger": "^11.1.2",
     "@nestjs/websockets": "^11.0.15",
+    "axios": "^1.8.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "ioredis": "^5.3.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
